Added basic, editable performance data list view and NGrapher config view
* Added performance data list view capable of editing the variable name,
  Regular Expression and configuring plot type, color and max/min/avg level
* Generating NGrapher configs into view
* Including hardcoded performance data model data

Squashed.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <script type="text/javascript" src="libs/backbone.js"></script>
 <script type="text/javascript" src="libs/require.js"></script>
 
+
+
+<div id="perfdata-list" class="main-box"></div>
+<div id="grapher-config" class="main-box"></div>
+
 <script type="text/javascript">
 $(function(){
   require(["main"], function(App){
@@ -18,6 +23,7 @@ $(function(){
   });
 });
 </script>
+
 
 </body>
 </html>
