Made config page full-height scrollable like in the list view

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div id="perfdata-box" class="main-box-wrap">
 			<div id="perfdata-list" class="main-box"></div>
 		</div>
-		<div class="main-box-wrap">
+		<div id="config-box" class="main-box-wrap">
 			<div id="grapher-config" class="main-box"></div>
 		</div>
 	</div>
