--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					
 					<div id="perfdata-result-box">
 						<div class="result-text"></div>
-						<div id="perfdata-highlighter">
+						<div id="perfdata-highlighter" class="perfdata-highlighter">
 								
 						</div>
 					</div>
@@ -35,6 +35,7 @@
 			</div>
 		</div>
 		<div id="perfdata-box" class="main-box-wrap">
+			<div id="perfdata-header" class="perfdata-highlighter"></div>
 			<div id="perfdata-list" class="main-box"></div>
 		</div>
 		<div id="config-box" class="main-box-wrap">
