Made performance data header on perf data list fixed at top

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 		</div>
 		<div id="perfdata-box" class="main-box-wrap">
 			<div id="perfdata-header" class="perfdata-highlighter"></div>
-			<div id="perfdata-list" class="main-box"></div>
+			<div class="perfdata-list-scroller">
+				<div id="perfdata-list" class="main-box"></div>
+			</div>
 		</div>
 		<div id="config-box" class="main-box-wrap">
 			<div id="grapher-config" class="main-box"></div>
