Removed ability of creating perf data items manually
* Removed add and remove
* Removed "create manually" button jumping to the list when no perf data
  could be created

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</div>
 					</div>
 					
-					<a href="#list" class="footer-btn">Go to the list</a>
+					<a href="#list" class="footer-btn">Use it to build the config</a>
 				</div>
 			</div>
 		</div>
