--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="libs/underscore.js"></script>
 <script type="text/javascript" src="libs/backbone.js"></script>
 <script type="text/javascript" src="libs/require.js"></script>
+<script type="text/javascript" src="libs/jquery-ui-1.10.0.custom.js"></script>
 
 <div id="slider-box">
 	<div id="slider" style="left: -100%;">
